--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
-		</header>
-		<div class="principal">
-			<img id="banner" src="banner.jpg">
+            <div class="caixa-topo">
+                <h1><img src="logo.png"></h1>
+                <nav>
+                    <ul class="lista-topo">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
+		<div class="principal">
+			
 			<h2 class="centralizado">Sobre a Barbearia Alura</h2>
 	
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -23,9 +32,10 @@
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
 		</div>
+
 		<div class="beneficios">
-			<h3 class="centralizado">Benefícios</h3>
-			<ul>
+			<h3>Benefícios</h3>
+			<ul class="lista-beneficios">
 				<li class="itens">Atendimento aos clientes</li>
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
@@ -33,5 +43,11 @@
 			</ul>
 			<img id="imgbeneficios" src="beneficios.jpg">
 		</div>
+
+		<footer>
+            <img class="imgcentralizada" src="logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura 2022.</p>
+        </footer>
+
 	</body>
 </html>
