--- a/produtos.html
+++ b/produtos.html
@@ -45,8 +45,8 @@
         </main>
 
         <footer>
-            <img class="imgcentralizada" src="logo-branco.png">
-            <h3>Alura</h3>
+            <img src="logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura 2022.</p>
         </footer>
 
     </body>
