--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 		<div class="principal">
 			
-			<h2 class="centralizado">Sobre a Barbearia Alura</h2>
+			<h2>Sobre a Barbearia Alura</h2>
 	
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+			<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
@@ -35,13 +35,14 @@
 
 		<div class="beneficios">
 			<h3>Benefícios</h3>
+			
 			<ul class="lista-beneficios">
 				<li class="itens">Atendimento aos clientes</li>
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
 				<li class="itens">Profissionais qualificados</li>		
 			</ul>
-			<img id="imgbeneficios" src="beneficios.jpg">
+			<img id="imgbeneficios" src="beneficios-curta.jpg">
 		</div>
 
 		<footer>
