--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style-home.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -21,29 +21,38 @@
             </div>
         </header>
 
-		<div class="principal">
-			
-			<h2>Sobre a Barbearia Alura</h2>
-	
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+		<img class="banner" src="banner.jpg">
 
-			<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+		<main>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			<section class="principal">
+				
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-		</div>
+				<img class="utensilios" src="utensilios.jpg" alt="Utensílios do barbeiro">
+		
+				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-		<div class="beneficios">
-			<h3>Benefícios</h3>
-			
-			<ul class="lista-beneficios">
-				<li class="itens">Atendimento aos clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais qualificados</li>		
-			</ul>
-			<img id="imgbeneficios" src="beneficios-curta.jpg">
-		</div>
+				<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+				<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+			</section>
+
+			<section class="beneficios">
+
+				<h3 class="titulo-principal">Benefícios</h3>
+				
+				<ul class="lista-beneficios">
+					<li class="itens">Atendimento aos clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Profissionais qualificados</li>		
+				</ul>
+				<img id="imgbeneficios" src="beneficios.jpg">
+
+			</section>
+		</main>
 
 		<footer>
             <img class="imgcentralizada" src="logo-branco.png">
